# reviews-api

./: .dockerignore  .env  .flake8  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  logging_config.yaml  main.py  pyproject.toml
app/controllers/: crud.py
app/database/: database.py  db.py
app/middlewares/: error_handler.py  logger.py
app/models/: schemas.py
app/routes/: routes.py
app/scraper/: scraping_service.py  scraping_utils.py
app/utils/: exceptions.py
reviews_api/controllers/: crud.py
reviews_api/database/: database.py
reviews_api/middlewares/: error_handler.py
reviews_api/models/: schemas.py
reviews_api/routes/: routes.py
reviews_api/scraper/: scraping_service.py
tests/: test_exceptions.py  test_reviews_mongodb.py  test_routes.py  test_scraping_service.py  test_scraping_utils.py  test_validators.py
