[tool.poetry]
name = "reviews-api"
version = "0.1.0"
description = ""
authors = ["Andrea Evangelista <andrea.itsec.eu@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.103.0"
pydantic = "^2.3.0"
black = "^23.7.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
